z-index fix

--- a/src/pages/PlaylistPage/PlaylistPage.css
+++ b/src/pages/PlaylistPage/PlaylistPage.css
@@ -98,7 +98,7 @@
     }
 
     .blacklist {
-        z-index: 99;
+        z-index: 15;
         position: relative;
         color: white;
     }
